# cppersist

./: .gitignore  CMakeLists.txt  README.md  cache.cpp  cache.h  cache.hpp  diskcache.cpp  diskcache.hpp  main.cpp  mongodbcache.cpp  mongodbcache.hpp  persister.hpp  test.cpp  toy.cpp
cppersist/: .gitignore  CMakeLists.txt  buildcppersist  cache.hpp  cmakeforuse.txt  diskcache.cpp  diskcache.hpp  local.cpp  local.hpp  memory.hpp  mongo.cpp  mongo.hpp  mongodbcache.cpp  mongodbcache.hpp  persister.cpp  persister.hpp
cppersist/cacheimpl/: diskcache.hpp  mongodbcache.cpp  mongodbcache.hpp  regcache.cpp  regcache.hpp
cppersist/cacheimpl/memory/: lrucache.cpp  lrucache.hpp  onecache.cpp  onecache.hpp  regcache.cpp  regcache.hpp
cppersist/cacheimpl/persistent/: diskcache.cpp  diskcache.hpp  mongodbcache.cpp  mongodbcache.hpp
cppersist/client/: local.cpp  local.hpp  mongo.cpp  persister.hpp
cppersist/cmake/: FindFilesystem.cmake
cppersist/crypto/: sha256.cpp  sha256.h
cppersist/docs/: annotated.html  class_prime_factorizer-members.html  class_prime_factorizer.html  classcpst_1_1_cache-members.html  classcpst_1_1_disk_cache-members.html  classcpst_1_1_l_r_u_cache-members.html  classcpst_1_1_l_r_u_cache.html  classcpst_1_1_mem_cache.html  classcpst_1_1_mongo_d_b_cache-members.html  classcpst_1_1_one_cache.html  classcpst_1_1_per_cache-members.html  classcpst_1_1_persistent_memoizable-members.html  classcpst_1_1_persistent_memoizable.html  classcpst_1_1_reg_cache.html  classcpst_1_1_s_h_a256-members.html  cppstconfig  dfs_8cpp_source.html  dir_4f48a67f03121a823188caa57cb8d585.html  dir_634ad77b7e08812085566dbfd126a0d5.html  dir_aca74a760da51944a759b00a5e1eba3c.html  dir_b6279a76222600646f06580cdf26fb95.html  diskcache_8cpp_source.html  fib_8cpp_source.html  files.html  functions_func.html  globals_enum.html  globals_eval.html  group___persist_mongo.html  hello_8cpp_source.html  hierarchy.html  local_8cpp_source.html  local_8hpp_source.html  lrucache_8cpp_source.html  memcache_8hpp_source.html  memcachetypes_8hpp.html  menudata.js  mongodbcache_8hpp_source.html  onecache_8cpp_source.html  onecache_8hpp_source.html  percache_8hpp_source.html  (+5 more)
cppersist/docs/html/: abcd_8hpp_source.html  cache_8hpp_source.html  class_d_f_s_solver-members.html  class_d_f_s_solver.html  class_fibonacci_solver-members.html  class_fibonacci_solver.html  class_node-members.html  class_node.html  class_x_y_z-members.html  class_x_y_z.html  classcpst_1_1_cache.html  classcpst_1_1_disk_cache.html  classcpst_1_1_mem_cache-members.html  classcpst_1_1_mongo_d_b_cache.html  classcpst_1_1_one_cache-members.html  classcpst_1_1_per_cache.html  classcpst_1_1_persistent_memoized-members.html  classcpst_1_1_persistent_memoized.html  classcpst_1_1_reg_cache-members.html  classcpst_1_1_s_h_a256.html  classes.html  dir_3a2bdddabd47d4479a80aba55a85c245.html  dir_53403d93963d3f5d2fcffd0698f5bddb.html  dir_7fbf996d479432d2cea5673c22dbb5d4.html  dir_b756ed76f6edecd21b1e5fd75719a53b.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_d088fb890959bf2cb6488edbb392c0a7.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_ff6b5900125bb0123025c1cb24bdc726.html  diskcache_8hpp_source.html  functions.html  functions_vars.html  globals.html  group___int_variables.html  group___persist.html  group___persist_local.html  group__pl.html  group__pm.html  index.html  local_8hpp.html  (+12 more)
cppersist/docs/latex/: annotated.tex  class_d_f_s_solver.eps  class_d_f_s_solver.tex  class_fibonacci_solver.eps  class_fibonacci_solver.tex  class_node.tex  class_prime_factorizer.eps  class_prime_factorizer.tex  class_x_y_z.tex  classcpst_1_1_cache.tex  classcpst_1_1_disk_cache.eps  classcpst_1_1_disk_cache.tex  classcpst_1_1_l_r_u_cache.eps  classcpst_1_1_l_r_u_cache.tex  classcpst_1_1_mem_cache.eps  classcpst_1_1_mem_cache.tex  classcpst_1_1_mongo_d_b_cache.eps  classcpst_1_1_mongo_d_b_cache.tex  classcpst_1_1_one_cache.eps  classcpst_1_1_one_cache.tex  classcpst_1_1_per_cache.eps  classcpst_1_1_per_cache.tex  classcpst_1_1_persistent_memoizable.tex  classcpst_1_1_persistent_memoized.eps  classcpst_1_1_persistent_memoized.tex  classcpst_1_1_reg_cache.eps  classcpst_1_1_reg_cache.tex  classcpst_1_1_s_h_a256.tex  files.tex  group___int_variables.tex  group___persist.tex  group___persist_local.tex  group___persist_mongo.tex  group__pl.tex  group__pm.tex  hierarchy.tex  local_8hpp.tex  memcachetypes_8hpp.tex  modules.tex  persister_8hpp.tex  (+1 more)
cppersist/docs/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_8.js  classes_0.js  classes_3.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  functions_3.js  groups_0.js
cppersist/doxygen/: cppstconfig
cppersist/examples/: dfs.cpp  fib.cpp  pow.cpp  primes.cpp  primesAlt.cpp  primesAlt2.cpp
cppersist/experiments/: Fibonacci.cpp  Ghost4.cpp  Ghost5.cpp  Primes.cpp  TrieCons.cpp  TrieGen.cpp  build  cachetimes.cpp  deleteAndRun  experiment  fibbiginttests.cpp  fibtests.cpp  ghost.cpp  ghost2.cpp  ghost3.cpp  ghostAll.sh  ghostall.cpp  ghostall2.cpp  ghostall3.cpp  mongokeytimes.cpp  nk.cpp  nttt.cpp  primetests.cpp  pullPushData  remake  run  runAll  runAll.sh  runNoDelete  runWRep.sh  runWoRep.sh  runner.cpp  test.cpp  ttt.cpp  ttt2.cpp
cppersist/experiments/data/: TTTWORep.csv  binCoeffSeq.csv  binCoeffSeqCpst.csv  binCoeffSeqNoCpst.csv  binCoeffWORep.csv  binCoeffWRep.csv  binCoeffWRepCpst.csv  binCoeffWRepNoCpst.csv  fibBISeq.csv  fibBIWORep  (+7 more)
cppersist/experiments/data-generation/: generators.cpp
cppersist/format/: format.sh
cppersist/include/: local.cpp  local.hpp  memory.hpp  mongo.cpp  mongo.hpp
cppersist/interfaces/: cache.hpp  memcache.hpp  percache.hpp
cppersist/memoization/: memcachetypes.hpp  memoizable.hpp  persister.cpp  persister.hpp
cppersist/test/: CMakeLists.txt  build_tests  google_build  install_tests  remake_tests  tests.cpp
cppersist/tests/: cachetimes.cpp
cppersist/utils/: files.hpp  log.hpp
demo/: .gitignore  CMakeLists.txt  build_demo  build_mongo_demo  buildcppersist  demo.cpp  fib.cpp  fib.g  fib.py  mongo_demo  mongo_fib.cpp  rebuild
(+213 files in other folders)
